[gd_scene load_steps=15 format=2]

[ext_resource path="res://Online/HUD/Hud (Online).gd" type="Script" id=1]
[ext_resource path="res://Online/Theme (Online).tres" type="Theme" id=2]
[ext_resource path="res://Online/HUD/MatchEnd.tscn" type="PackedScene" id=3]
[ext_resource path="res://Online/HUD/Pause(Online).gd" type="Script" id=4]
[ext_resource path="res://assets/UI/Settings Popup.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFontData" id=17]
font_path = "res://assets/Fonts/TF2.ttf"

[sub_resource type="DynamicFont" id=18]
size = 30
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
font_data = SubResource( 17 )

[sub_resource type="DynamicFont" id=19]
size = 30
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
font_data = SubResource( 17 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/Fonts/TF2.ttf"

[sub_resource type="DynamicFont" id=27]
size = 30
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.333333, 0.333333, 0.372549, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 1, 0.698039, 0.458824, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="HUD (Online)" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ProgressBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -246.0
margin_right = 246.0
margin_bottom = 35.0
theme = ExtResource( 2 )
min_value = -100.0
step = 1.0
rounded = true
percent_visible = false

[node name="Red" type="Panel" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 406.0
margin_top = 41.0
margin_right = 638.0
margin_bottom = 100.0

[node name="Red_Timer" type="Label" parent="Red"]
margin_left = 11.0
margin_top = 8.0
margin_right = 219.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 18 )
text = "3:00"
align = 1
valign = 1

[node name="Blue" type="Panel" parent="."]
self_modulate = Color( 0, 0.226563, 1, 1 )
margin_left = 645.0
margin_top = 41.0
margin_right = 874.0
margin_bottom = 100.0

[node name="Blue_Timer" type="Label" parent="Blue"]
margin_left = 11.0
margin_top = 8.0
margin_right = 219.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 19 )
text = "3:00"
align = 1
valign = 1

[node name="MatchEnd" parent="." instance=ExtResource( 3 )]

[node name="Pause" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="Pause"]
self_modulate = Color( 1, 1, 1, 0.501961 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Quit" type="Button" parent="Pause/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -843.0
margin_top = 641.0
margin_right = -558.0
margin_bottom = 698.0
rect_pivot_offset = Vector2( 107, 0 )
focus_mode = 0
custom_colors/font_color = Color( 0, 0.556863, 0.0823529, 1 )
custom_fonts/font = SubResource( 27 )
custom_styles/hover = SubResource( 28 )
custom_styles/pressed = SubResource( 29 )
custom_styles/disabled = SubResource( 30 )
custom_styles/normal = SubResource( 31 )
enabled_focus_mode = 0
text = "exit"
__meta__ = {
"_editor_description_": ""
}

[node name="Disconnect" type="Button" parent="Pause/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1163.0
margin_top = 641.0
margin_right = -878.0
margin_bottom = 698.0
rect_pivot_offset = Vector2( 107, 0 )
focus_mode = 0
custom_colors/font_color = Color( 0, 0.556863, 0.0823529, 1 )
custom_fonts/font = SubResource( 27 )
custom_styles/hover = SubResource( 28 )
custom_styles/pressed = SubResource( 29 )
custom_styles/disabled = SubResource( 30 )
custom_styles/normal = SubResource( 31 )
enabled_focus_mode = 0
text = "Disconnect"
__meta__ = {
"_editor_description_": ""
}

[node name="Settings" type="Button" parent="Pause/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1163.0
margin_top = 511.0
margin_right = -878.0
margin_bottom = 568.0
rect_pivot_offset = Vector2( 107, 0 )
focus_mode = 0
custom_colors/font_color = Color( 0, 0.556863, 0.0823529, 1 )
custom_fonts/font = SubResource( 27 )
custom_styles/hover = SubResource( 28 )
custom_styles/pressed = SubResource( 29 )
custom_styles/disabled = SubResource( 30 )
custom_styles/normal = SubResource( 31 )
enabled_focus_mode = 0
text = "Settings"
__meta__ = {
"_editor_description_": ""
}

[node name="Items" type="Button" parent="Pause/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1163.0
margin_top = 441.0
margin_right = -878.0
margin_bottom = 498.0
rect_pivot_offset = Vector2( 107, 0 )
focus_mode = 0
custom_colors/font_color = Color( 0, 0.556863, 0.0823529, 1 )
custom_fonts/font = SubResource( 27 )
custom_styles/hover = SubResource( 28 )
custom_styles/pressed = SubResource( 29 )
custom_styles/disabled = SubResource( 30 )
custom_styles/normal = SubResource( 31 )
disabled = true
enabled_focus_mode = 0
text = "Items"
__meta__ = {
"_editor_description_": ""
}

[node name="Loadouts" type="Button" parent="Pause/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1163.0
margin_top = 369.0
margin_right = -878.0
margin_bottom = 426.0
rect_pivot_offset = Vector2( 107, 0 )
focus_mode = 0
custom_colors/font_color = Color( 0, 0.556863, 0.0823529, 1 )
custom_fonts/font = SubResource( 27 )
custom_styles/hover = SubResource( 28 )
custom_styles/pressed = SubResource( 29 )
custom_styles/disabled = SubResource( 30 )
custom_styles/normal = SubResource( 31 )
disabled = true
enabled_focus_mode = 0
text = "Loadouts"
__meta__ = {
"_editor_description_": ""
}

[node name="Resume" type="Button" parent="Pause/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1163.0
margin_top = 255.0
margin_right = -878.0
margin_bottom = 312.0
rect_pivot_offset = Vector2( 107, 0 )
focus_mode = 0
custom_colors/font_color = Color( 0, 0.556863, 0.0823529, 1 )
custom_fonts/font = SubResource( 27 )
custom_styles/hover = SubResource( 28 )
custom_styles/pressed = SubResource( 29 )
custom_styles/disabled = SubResource( 30 )
custom_styles/normal = SubResource( 31 )
enabled_focus_mode = 0
text = "resume"
__meta__ = {
"_editor_description_": ""
}

[node name="Settings Popup" parent="Pause" instance=ExtResource( 5 )]

[connection signal="pressed" from="Pause/Panel/Quit" to="Pause" method="_on_Quit_pressed"]
[connection signal="pressed" from="Pause/Panel/Disconnect" to="Pause" method="_on_Disconnect_pressed"]
[connection signal="pressed" from="Pause/Panel/Settings" to="Pause" method="_on_Settings_pressed"]
